# notebook

./: .gitignore  CMakeLists.txt
dep/include/absl/base/: config.h
dep/include/google/protobuf/: port_def.inc
dep/lib/Debug/: absl_decode_rust_punycode.lib  absl_demangle_rust.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_hashtable_profiler.lib  absl_log_flags.lib  absl_log_internal_structured_proto.lib  absl_poison.lib  absl_random_internal_entropy_pool.lib  absl_tracing_internal.lib  absl_utf8_for_code_point.lib  utf8_range.lib  utf8_validity.lib
dep/lib/Release/: absl_decode_rust_punycode.lib  absl_demangle_rust.lib  absl_flags_commandlineflag.lib  absl_flags_commandlineflag_internal.lib  absl_flags_config.lib  absl_flags_internal.lib  absl_flags_marshalling.lib  absl_flags_parse.lib  absl_flags_private_handle_accessor.lib  absl_flags_program_name.lib  absl_flags_reflection.lib  absl_flags_usage.lib  absl_flags_usage_internal.lib  absl_hashtable_profiler.lib  absl_log_flags.lib  absl_log_internal_structured_proto.lib  absl_poison.lib  absl_profile_builder.lib  absl_random_internal_entropy_pool.lib  absl_tracing_internal.lib  absl_utf8_for_code_point.lib  utf8_range.lib  utf8_validity.lib
proto/: xn.proto
resources/: notebook.qrc  notebook.rc
src/: notebook_impl.cpp  notebook_impl.h  notebook_utils.cpp  notebook_utils.h  question_answer_impl.cpp  question_answer_impl.h  xn.pb.cc  xn.pb.h
ui/: group_dashboard.cpp  group_dashboard.h  group_dashboard.ui  main.cpp  notebook.cpp  notebook.h  notebook.qrc  notebook.ui  question_dashboard.cpp  question_dashboard.h  question_dashboard.ui  qwenclient.cpp  qwenclient.h
